--- a/Source/webapp/templates/detail.html
+++ b/Source/webapp/templates/detail.html
@@ -1,22 +1,12 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <title>Document</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block title %}{{ todolist.description }}{% endblock %}
+{% block content %}
     <div class="card" style="width: 18rem;">
   <div class="card-body text-center">
     <h5 class="card-title">{{ todolist.description }}</h5>
     <h6 class="card-subtitle mb-2 text-body-secondary">{{ todolist.status }}</h6>
     <p class="card-text">{{ todolist.time }}</p>
-    <a href="delete/?id={{ todolist.id }}" class="card-link">Delete</a>
-    <a href="/" class="card-link">To the main page</a>
+    <a href="{% url 'delete' %}" class="card-link">Delete</a>
   </div>
 </div>
-</body>
-</html>
+{% endblock %}
