--- a/Source/webapp/templates/todolist.html
+++ b/Source/webapp/templates/todolist.html
@@ -5,7 +5,7 @@
 {% for todo in todolist %}
     <div class="card mt-2 text-center" style="width: 18rem;">
         <div class="card-body">
-            <a style="text-decoration: none; color: black" href="detail/{{ todo.id }}">
+            <a style="text-decoration: none; color: black" href="{% url "detail" todo.pk %}">
                 <h4>{{ todo.description }}</h4></a>
             <p>{{ todo.status }}</p>
         </div>
